# cser

./: Cargo.toml
benches/: bench.rs
derive/: Cargo.toml
derive/src/: de.rs  en.rs  lib.rs
src/: binary.rs  bits.rs  error.rs  fast.rs  imp.rs  lib.rs  read_writer.rs
tests/: serialization.rs
